@@ -80,6 +80,25 @@ specification files.
     ``snapshot-``.
 
 
+.. cfunction:: sipErrorState sipBadCallableArg(int arg_nr, PyObject *arg)
+
+    .. versionadded:: 4.10
+
+    This is called from :directive:`%MethodCode` to raise a Python exception
+    when an argument to a function, a C++ constructor or method is found to
+    have an unexpected type.  This should be used when the
+    :directive:`%MethodCode` does additional type checking of the supplied
+    arguments.
+
+    :param arg_nr:
+        the number of the argument.  Arguments are numbered from 0 but are
+        numbered from 1 in the detail of the exception.
+    :param arg:
+        the argument.
+    :return:
+        the value that should be assigned to ``sipError``.
+
+
 .. cfunction:: void sipBadCatcherResult(PyObject *method)
 
     This raises a Python exception when the result of a Python reimplementation
